nav bar search mobile overflow fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -30,7 +30,7 @@
       @apply bg-green text-white rounded py-2 px-4 text-sMobile tablet:text-sTablet desktop:text-sDesktop cursor-pointer hover:animate-pulse;
     }
     .link {
-      @apply py-2 mx-5 h-fit w-fit text-sMobile tablet:text-sTablet desktop:text-sDesktop break-words cursor-pointer;
+      @apply py-2 mobile:mx-5 h-fit w-fit text-sMobile tablet:text-sTablet desktop:text-sDesktop break-words cursor-pointer;
     }
     .panel {
       @apply flex overflow-auto justify-start my-5;
